--- a/src/views/css/colorpicker.css
+++ b/src/views/css/colorpicker.css
@@ -1,11 +1,11 @@
 @font-face {
-    font-family: "Lato";
-    src: url("fonts/Lato-Regular.ttf");
+  font-family: "Lato";
+  src: url("fonts/Lato-Regular.ttf");
 }
 
 html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 body,
@@ -13,268 +13,274 @@ p,
 h1,
 h2,
 input {
-    margin: 0;
-    font-family: "Lato", sans-serif;
+  margin: 0;
+  font-family: "Lato", sans-serif;
 }
 body {
-    overflow: hidden;
+  overflow: hidden;
 }
 a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 /* CLEAN OPTION */
 .clean .toolbar,
 .clean.darkMode .toolbar {
-    border-bottom: 1px solid rgba(0, 0, 0, 0);
+  border-bottom: 1px solid rgba(0, 0, 0, 0);
 }
 .clean .toolbar p:not(#clean_button),
 .clean #app_buttons {
-    opacity: 0.1;
+  opacity: 0.1;
 }
 
 .clean .inputs,
 .clean .value,
 .clean .sliders {
-    opacity: 0;
+  opacity: 0;
 }
 
 #tools {
-    font-size: 0.9em;
-    margin-top: 1px;
-    margin-bottom: 1px;
+  padding: 5px 3px 5px 8px;
+  font-size: 0.9em;
+  margin-top: 1px;
+  margin-bottom: 1px;
 }
 #tools p {
-    color: rgba(0, 0, 0, 0.3);
-    font-weight: bold;
-    padding: 0 6px 0 5px;
-    width: 17px;
-    text-align: center;
-    -webkit-app-region: no-drag;
-    cursor: pointer;
-    transition: 0.3s;
+  color: rgba(0, 0, 0, 0.45);
+  font-weight: bold;
+  padding: 2px 5px 2px 5px;
+  width: 17px;
+  text-align: center;
+  -webkit-app-region: no-drag;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 3px;
 }
 .darkMode #tools p {
-    color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.7);
 }
 #tools p:hover {
-    color: rgba(0, 0, 0, 0.45);
+  background-color: rgba(0, 0, 0, 0.1);
+  color: rgba(0, 0, 0, 0.5);
 }
 .darkMode #tools p:hover {
-    color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.2);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 #tools p.active {
-    color: rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.6);
 }
 .darkMode #tools p.active {
-    color: rgba(255, 255, 255, 0.85);
+  color: rgba(255, 255, 255, 0.9);
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.3);
 }
 
 #tools::selection,
 #tools p::selection,
 #tools li::selection,
 #tools div::selection {
-    background: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0);
 }
 
 /**
  * HEADER CSS
  */
 header {
-    position: absolute;
-    z-index: 100;
-    width: 100%;
-    top: -10px;
-    visibility: hidden;
-    opacity: 0;
-    transition: 0.6s;
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  top: -10px;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.6s;
 }
 header.shading {
-    visibility: visible;
-    opacity: 1;
-    top: 34px;
+  visibility: visible;
+  opacity: 1;
+  top: 34px;
 }
 header .shades,
 header .tints,
 header .naturals {
-    display: flex;
+  display: flex;
 }
 header .shades aside,
 header .tints aside,
 header .naturals aside {
-    flex: 1 100%;
-    height: 10vmin;
-    cursor: pointer;
+  flex: 1 100%;
+  height: 10vmin;
+  cursor: pointer;
 }
 
 /**
  * MAIN COLORPICKER CSS
  */
 .main {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding-top: 15px;
-    padding-bottom: 3px;
-    padding-left: 10px;
-    width: 100%;
-    text-align: center;
-    display: flex;
-    align-items: flex-end;
-    overflow: hidden;
-    box-sizing: border-box;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding-top: 15px;
+  padding-bottom: 3px;
+  padding-left: 10px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  align-items: flex-end;
+  overflow: hidden;
+  box-sizing: border-box;
 }
 
 .sliders,
 .inputs {
-    position: relative;
-    bottom: -32px;
-    transition: 0.5s;
+  position: relative;
+  bottom: -32px;
+  transition: 0.5s;
 }
 
 .alpha_bar,
 #alpha_value {
-    position: relative;
-    transition: 0.5s;
-    bottom: -10px;
+  position: relative;
+  transition: 0.5s;
+  bottom: -10px;
 }
 .opacity .sliders,
 .opacity .alpha_bar,
 .opacity .inputs,
 .opacity #alpha_value {
-    bottom: 0.5px;
+  bottom: 0.5px;
 }
 
 .red_bar,
 .green_bar,
 .blue_bar,
 .alpha_bar {
-    position: relative;
-    width: 220px;
-    height: 20px;
-    padding: 6px 0;
+  position: relative;
+  width: 220px;
+  height: 20px;
+  padding: 6px 0;
 }
 
 /* STYLING SLIDER */
 input[type="range"] {
-    margin: 0;
-    padding: 3px 0;
-    -webkit-appearance: none;
-    outline: none;
-    background: none;
-    width: 100%;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 3px 0;
+  -webkit-appearance: none;
+  outline: none;
+  background: none;
+  width: 100%;
+  box-sizing: border-box;
 }
 input[type="range"]::-webkit-slider-thumb {
-    position: relative;
-    z-index: 100;
-    bottom: 10px;
-    -webkit-appearance: none;
-    height: 22px;
-    width: 22px;
-    border-radius: 50%;
-    background: #ffffff;
-    border-bottom: 2px solid #f3f3f3;
-    cursor: pointer;
+  position: relative;
+  z-index: 100;
+  bottom: 10px;
+  -webkit-appearance: none;
+  height: 22px;
+  width: 22px;
+  border-radius: 50%;
+  background: #ffffff;
+  border-bottom: 2px solid #f3f3f3;
+  cursor: pointer;
 }
 
 progress[value]::-webkit-progress-bar {
-    position: absolute;
-    width: 99%;
-    top: 5px;
-    left: 1px;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 6px;
-    height: 10px;
+  position: absolute;
+  width: 99%;
+  top: 5px;
+  left: 1px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 6px;
+  height: 10px;
 }
 progress[value]::-webkit-progress-value {
-    border-radius: 6px;
-    height: 10px;
+  border-radius: 6px;
+  height: 10px;
 }
 .red_bar progress[value]::-webkit-progress-value {
-    background: rgb(255, 87, 57);
+  background: rgb(255, 87, 57);
 }
 .green_bar progress[value]::-webkit-progress-value {
-    background: rgb(105, 195, 59);
+  background: rgb(105, 195, 59);
 }
 .blue_bar progress[value]::-webkit-progress-value {
-    background: rgb(65, 165, 225);
+  background: rgb(65, 165, 225);
 }
 .alpha_bar progress[value]::-webkit-progress-value {
-    background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.5);
 }
 progress {
-    -webkit-appearance: none;
-    appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
 }
 
 /* INPUTS STYLE */
 .inputs {
 }
 .inputs input {
-    display: block;
-    margin-bottom: 8px;
-    margin-left: 10px;
+  display: block;
+  margin-bottom: 8px;
+  margin-left: 10px;
 }
 
 .inputs input[type="number"]::-webkit-inner-spin-button,
 .inputs input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-    margin: 0;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  margin: 0;
 }
 
 .inputs input[type="number"],
 input[type="text"] {
-    width: 40px;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.08);
-    color: rgba(0, 0, 0, 0.5);
-    border: none;
-    padding: 2px;
-    font-size: 1.05em;
-    font-weight: bold;
-    outline: none;
-    transition: 0.3s;
+  width: 40px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.08);
+  color: rgba(0, 0, 0, 0.5);
+  border: none;
+  padding: 2px;
+  font-size: 1.05em;
+  font-weight: bold;
+  outline: none;
+  transition: 0.3s;
 }
 .darkMode .inputs input[type="number"],
 .darkMode input[type="text"],
 .darkMode .value p {
-    background: rgba(255, 255, 255, 0.08);
-    color: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.08);
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .value {
-    margin-bottom: 9px;
-    margin-left: 10px;
-    transition: opacity 0.4s;
+  margin-bottom: 9px;
+  margin-left: 10px;
+  transition: opacity 0.4s;
 }
 .value input {
-    display: block;
-    width: 105px;
+  display: block;
+  width: 105px;
 }
 
 #contextMenu {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 3000;
-    padding: 10px;
-    background: rgba(0, 0, 0, 0.4);
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3000;
+  padding: 10px;
+  background: rgba(0, 0, 0, 0.4);
 }
 .darkMode #contextMenu {
-    background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.4);
 }
 #contextMenu li {
-    list-style: none;
-    padding: 3px 2px;
+  list-style: none;
+  padding: 3px 2px;
 }
 #contextMenu .separator {
-    padding: 0;
-    margin: 4px 0;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  padding: 0;
+  margin: 4px 0;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
