--- a/src/components/windowBar/appIcons/appIcon/style.module.css
+++ b/src/components/windowBar/appIcons/appIcon/style.module.css
@@ -3,6 +3,7 @@
   --app-icon-second-color: #3e3e3e;
   --app-icon-third-color: #7b7b7b;
   --app-icon-opacity: 0.7;
+  --app-icon-selected: rgba(0, 0, 0, 0.1);
   --app-icon-hover: rgba(0, 0, 0, 0.15);
   --app-icon-active: rgba(0, 0, 0, 0.25);
 }
@@ -13,6 +14,7 @@
     --app-icon-second-color: #bebdbd;
     --app-icon-third-color: #989898;
     --app-icon-opacity: 0.8;
+    --app-icon-selected: rgba(255, 255, 255, 0.1);
     --app-icon-hover: rgba(255, 255, 255, 0.15);
     --app-icon-active: rgba(255, 255, 255, 0.25);
   }
@@ -20,7 +22,7 @@
 
 .section {
   -webkit-app-region: no-drag;
-  width: 30px;
+  width: 28px;
   height: 70%;
   padding: 0 1px;
   display: flex;
@@ -29,6 +31,10 @@
   border-radius: 7px;
   margin: 0 1px;
   transition: 0.3s background;
+}
+
+.section.selected {
+  background: var(--app-icon-selected);
 }
 
 .section:hover {
