--- a/src/views/settings.html
+++ b/src/views/settings.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/tippy.css" />
     <script src="./js/sortable.js"></script>
     <script src="./js/tippy.js"></script>
+    <script defer src="js/icons.js"></script>
     <script defer src="./js/settings.js"></script>
   </head>
   <body>
