--- a/src/react/components/colorBackground/style.module.css
+++ b/src/react/components/colorBackground/style.module.css
@@ -1,12 +1,14 @@
 .colorBackground {
   width: 100%;
   height: 40vh;
-  background: var(--colopicker-main-color);
+  background: var(--colorpicker-main-color);
 }
 
 @media screen and (max-height: 245px) {
   .colorBackground {
-    position: absolute;
-    height: calc(100vh - 34px);
+    /* position: absolute; */
+    top: 0;
+    left: 0;
+    height: 100%;
   }
 }
