--- a/src/react/windows/colorpicker.module.css
+++ b/src/react/windows/colorpicker.module.css
@@ -1,3 +1,11 @@
+.colorpicker {
+  background: var(--colorpicker-main-color);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .sliders {
   height: 100%;
   display: flex;
