--- a/src/react/components/windowBar/windowBar.module.css
+++ b/src/react/components/windowBar/windowBar.module.css
@@ -16,7 +16,7 @@
 
 .windowBar {
   display: flex;
-  background: var(--colorpicker-background-color);
+  flex-shrink: 0;
   justify-content: space-between;
   height: 34px;
   width: 100%;
@@ -25,8 +25,16 @@
   padding-right: 138px;
 }
 
-body[class='bordered'] .windowBar {
+[class='no-vibrancy'] .windowBar {
+  background: var(--colorpicker-background-color);
+}
+
+[class='bordered'] .windowBar {
   border-radius: 4px;
+}
+
+[class='colored'] .windowBar {
+  background: var(--main-color);
 }
 
 .windowButtons {
